515 Refactor task dispatchers and repositories to improve concurrency handling and ensure thread safety with synchronized collections and locking mechanisms.